# 47-QP

./: .gitignore  CMakeLists.txt  README.md
include/krang-qp/: Controller.hpp  filter.hpp  id.hpp  ik.hpp  qp.hpp
src/: Controller.cpp  id.cpp  ik.cpp  qp.cpp
